src/index.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

:root {
  --bg-dark: hsl(0, 0%, 0%);
  --bg: hsl(0, 0%, 8%);
  --bg-light: hsl(0, 0%, 15%);
  --bg-hover: hsl(0, 0%, 20%);
  --text: hsl(0, 0%, 95%);
  --text-muted: hsl(0, 0%, 80%);
  --border: hsl(0, 0%, 30%);
  --img-border: rgba(0, 0, 0, 0.08);
  --highlight: hsl(0, 0%, 60%);
  --gradient-hover: linear-gradient(0deg, var(--bg) 95%, var(--bg-light));
  --gradient: linear-gradient(0deg, var(--bg), var(--bg-light));
  --svg-color: hsl(0, 0%, 95%);
  --text-active : hsl(0, 0%, 90%);
  --outline-color: hsl(215, 94%, 51%);
}

.main{
    min-height: 100dvh;
    width: 100%;
    padding: 1rem;
    display: flex;
    align-items: center;
    justify-content: start;
    flex-direction: column;
    background-color: var(--bg);
}

.h{
    margin-top: 1.5rem;
    color: var(--text-active);
    text-align: center;
}
h1{
    font-size:  clamp(2rem, 1.5vw + 2.5rem, 2vw + 4rem);
}
.city_search{
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin: 2.5rem 0 2rem 0;
}
#search{
    height: 3rem;
    width: 60%;
    border-radius: 8px;
    outline: none;
    font-size: 1.4rem;
    font-weight: 400;
    padding: 8px 10px;
    margin-right: 1rem;
    flex: 1;
}
#search:focus{
    border-color: dodgerblue;
    box-shadow: 0 0 10px rgba(30, 144, 255, 0.5);
}
::placeholder{
    color: var(--outline-color);
}

.btn_search{
    color: var(--text-active);
    font-size: 1.4rem;
    font-weight: 500;
    background-color: var(--outline-color);
    border-radius: 10px;
    padding: 10px 20px;
    cursor: pointer;
    border: none;
    transition: all 0.3s linear;
}

.btn_search:hover{
    background-color: blue;
    box-shadow:
    0 4px 6px rgba(0, 0, 0, 0.1),
    0 10px 20px rgba(0, 0, 0, 0.15);
}

h2{
    color: var(--text-active);
}
.temp{
    background-color: var(--bg-hover);
    padding: 20px 10px;
    box-shadow:
    0 4px 6px rgba(0, 0, 0, 0.1),
    0 10px 20px rgba(0, 0, 0, 0.15);
    border-radius: 6px;
    border: 1px solid rgba(255, 250, 250, 0.332);
    display: grid;
    grid-template-columns: auto 1fr;
    gap: 0.5rem 1rem;
    align-items: center;
}

.temperature{
    font-size: 1.8rem;
    align-self: start;
    grid-row: 1 / 3;
}

.city{
    font-size: 1.3rem;
    grid-column: 2;
}
.city,
.date{
    justify-self: end;
    text-align: right;
}
.date{
    font-size: 1rem;
    grid-column: 2;
}
.weather_data{
    margin: 2rem 0;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 1rem;
}
.wdata{
    font-size: 1.2rem;
    border-radius: 4px;
    font-weight: 400;
    width: auto;
    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
    color: var(--text-active);
    padding: 1.25rem 0.75rem;
    background-color: var(--bg-hover);
}

